Begin work on SendGrid docs

--- a/documentation.html
+++ b/documentation.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Documentation
-description: Get setup and running with Ideal Postcodes
+description: Get setup and running with SendGrid
 download: false
 ---
 <!-- wrap each main section with "bs-docs-section" class -->
