--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 ---
 layout: home
 title: Home
-description: A generic plugin for Rock RMS
+description: A communication transport for Rock RMS
 download: true
 ---
-<h1>Accurate Address Verification for the UK</h2>
-<p class="lead">Address verification for <a href="http://rockrms.com">Rock RMS</a> using the most accurate data available.</p>
+<h1>Reliable Email Delivery</h2>
+<p class="lead">Send your <a href="http://rockrms.com">Rock RMS</a> emails with SendGrid.</p>
 
 <div class="row">
   <div class="col-md-4">
 
-    <i class="fa fa-map-marker fa-3x"></i>
-    <h2>Accurate</h2>
-    <p><a href="http://ideal-postcodes.co.uk">Ideal Postcodes</a> uses data updated daily from the Royal Mail Postcode Address File as well as additional data from the ONS and Ordnance Survey.</p>
+    <i class="fa fa-cog fa-3x"></i>
+    <h2>Reliable</h2>
+    <p><a href="http://sendgrid.com">SendGrid</a> is considered one of the most <a href="https://www.quora.com/Transactional-Emails/What-should-I-choose-Mandrill-or-Sendgrid">reputable and reliable</a> email delivery services on the web web.</p>
   </div>
   <div class="col-md-4">
-    <i class="fa fa-repeat fa-3x"></i>
-    <h2>Regularly Updated</h2>
-    <p>This plugin takes advantages of all of the features of {{site.name}} and is regularly updated to be compatible with new features as they are released.</p>
+    <i class="fa fa-line-chart fa-3x"></i>
+    <h2>Email Analytics</h2>
+    <p>Monitor how your users engage with your email campaigns by tracking opens, clicks, and bounces.</p>
   </div>
   <div class="col-md-4">
     <i class="fa fa-circle-o-notch fa-3x"></i>
