--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@ download: true
 
 <div class="row">
   <div class="col-md-4">
-
     <i class="fa fa-cog fa-3x"></i>
     <h2>Reliable</h2>
-    <p><a href="http://sendgrid.com">SendGrid</a> is considered one of the most <a href="https://www.quora.com/Transactional-Emails/What-should-I-choose-Mandrill-or-Sendgrid">reputable and reliable</a> email delivery services on the web web.</p>
+    <p><a href="http://sendgrid.com">SendGrid</a> is considered one of the most <a href="https://www.quora.com/Transactional-Emails/What-should-I-choose-Mandrill-or-Sendgrid">reputable and reliable</a> email delivery services on the web. Trust your emails with SendGrid and give up worrying about deliverability.</p>
   </div>
   <div class="col-md-4">
     <i class="fa fa-line-chart fa-3x"></i>
     <h2>Email Analytics</h2>
-    <p>Monitor how your users engage with your email campaigns by tracking opens, clicks, and bounces.</p>
+    <p>Monitor how your users engage with your email campaigns by tracking opens, clicks, and bounces. Evaluate and tweak your campaigns to increase engagement.</p>
   </div>
   <div class="col-md-4">
     <i class="fa fa-circle-o-notch fa-3x"></i>
     <h2>Open Source</h2>
-    <p>Like all plugins produced by Bricks and Mortar, {{site.name}} is open source guaranteeing a transparent product you can rely on.</p>
+    <p>Like all plugins produced by Bricks and Mortar, {{site.name}} is open source guaranteeing you a transparent product you can rely on.</p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-    <a href="{{site.github.url}}/documentation.html" class="btn btn-outline btn-lg">Read More</a>
+    <a href="{{site.github.url}}/documentation.html" class="btn btn-outline btn-lg">Read the Docs</a>
   </div>
 </div>
