--- a/documentation.html
+++ b/documentation.html
@@ -10,11 +10,11 @@ download: false
   <h1 id="setup" class="page-header">Setup</h1>
 
   <h2 id="sendgrid-setup">SendGrid Account Setup</h3>
-  <p>To use this plugin you will need a <a href="https://sendgrid.com/">SendGrid account</a>. SendGrid provide a <a href="https://sendgrid.com/pricing">variety</a> of plans for different volumes of sending. The Lite plan is not supported by this plugin but all other plans including the free plan which provides 12,000 emails per month free.</p>
+  <p>To use this plugin you will need a <a href="https://sendgrid.com/">SendGrid account</a>. SendGrid provide a <a href="https://sendgrid.com/pricing">variety</a> of plans for different volumes of sending. The Lite plan is not supported by this plugin but all other plans are, including the free plan which provides 12,000 free emails per month.</p>
   <p>After creating an account you'll have to wait for your <a href="https://support.sendgrid.com/hc/en-us/articles/200181628">account provisioning</a> to complete before you are able to send email.
     <h2 id="sendgrid-configuration">SendGrid Configuration</h3>
       <h4>Credentials</h4>
-    <p>Version 1.0.0 of the plugin does not currently support API key authorisation for sending so to send an email you'll need configure a credential. To do this from the SendGrid dashboard go to <span data-type="action">Settings > Credentials</span> and then add a new credential. Ensure that only the Mail checkbox is checked, give the credential an appropiate username (for example, rockmail), and a strong password. Remember these for later.
+    <p>To send emails from Rock you'll need to configure a separate credential from the one you use to login to the SendGrid dashboard. To do this, from the SendGrid dashboard, go to <span data-type="action">Settings > Credentials</span> and then add a new credential. Ensure that only the Mail checkbox is checked, give the credential an appropiate username (for example, rock_send), and a strong password. Remember these for later.
       <img src="{{site.github.url}}/assets/images/documentation/sendgrid-newcredential.png" class="img-responsive" />
     </p>
       <h4>Analytics</h4>
@@ -34,7 +34,7 @@ download: false
     <h4>Whitelabels</h4>
     <p>To ensure the best possible delivery you'll need to configure whitelabels (<span data-type="action">Settings > Whitelabels</span>) for the domain(s) you wish to send mail from. This will involve changing DNS records on those domains and so consequently you may need to help of your network administrator. SendGrid make the process very easy and have <a href="https://support.sendgrid.com/hc/en-us/articles/215904137-Whitelabel-Video-Tutorials">a great video</a> to help you get setup.</p>
     <h2 id="rock-sub-section">Rock Configuration</h2>
-    <p>Configuring Rock to use SendGrid to deliver your emails is painless. Visit <span data-type="action">Admin Tools > Communications > Communication Transports > SendGrid SMTP</span>, here you'll find the options for configuring SendGrid. Most of the default options here won't need changing (in fact altering the server from smtp.sendgrid.net is a bad idea!) but you will need to put in the username and password credentials you created on the SendGrid dashboard earlier and set the transport to Active.
+    <p>Configuring Rock to use SendGrid to deliver your emails is painless. Visit <span data-type="action">Admin Tools > Communications > Communication Transports > SendGrid SMTP</span>. Here you'll find the options for configuring SendGrid. Most of the default options here won't need changing (in fact altering the server from smtp.sendgrid.net is a bad idea!) but you will need to put in the username and password credentials you created on the SendGrid dashboard earlier and set the transport to Active.
         <img src="{{site.github.url}}/assets/images/documentation/rock-transport.png" class="img-responsive" />
     Then you'll need to go to <span data-type="action">Admin Tools > Communications > Communication Mediums > Email</span> and switch the Communication Transport to SendGrid SMTP.
   </section>
