--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Documentation
 description: Get setup and running with SendGrid
-download: false
+download: true
 ---
 <!-- wrap each main section with "bs-docs-section" class -->
 <section class="bs-docs-section">
