--- a/documentation/index.html
+++ b/documentation/index.html
@@ -22,7 +22,7 @@ download: true
     <a href="{{site.github.url}}/assets/images/documentation/sendgrid-api-key-mail-send-access.png" data-featherlight><img src="{{site.github.url}}/assets/images/documentation/sendgrid-api-key-mail-send-access.png" class="img-responsive" id="feather-api-key-access" alt="SendGrid API Key Access" /></a>
     </p>
       <h4>Analytics</h4>
-    <p>{{site.name}} supports email analytics, configuring this is a two step process. First visit <span data-type="action">Settings > Mail Settings</span> on the SendGrid dashboard and switch <span data-type="action">Event Notification</span> on. In the HTTP Post URL box type in your Rock URL followed by <em>/webhooks/SendGrid.ashx</em>. For instance if my Rock site was hosted at http://rock.bricksandmortarstudio.com I'd type in <em>http://rock.bricksandmortarstudio.com/webhooks/SendGrid.ashx</em>. Ensure you select the following actions:
+    <p>{{site.name}} supports email analytics, configuring this is a two step process. First visit <span data-type="action">Settings > Mail Settings</span> on the SendGrid dashboard and switch <span data-type="action">Event Notification</span> on. In the HTTP Post URL box type in your Rock URL followed by <em>/webhooks/SendGrid.ashx</em>. For instance if my Rock site was hosted at https://rock.bricksandmortarstudio.com I'd type in <em>https://rock.bricksandmortarstudio.com/webhooks/SendGrid.ashx</em>. Ensure you select the following actions:
       <ul>
         <li>Opened</li>
         <li>Clicked</li>
